manifests/apps/stremio/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stremio-web
  namespace: stremio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stremio-web
  template:
    metadata:
      labels:
        app: stremio-web
    spec:
      serviceAccountName: stremio
      imagePullSecrets:
      - name: harbor-registry
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: stremio-build
          mountPath: /var/www/stremio-web
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
          readOnly: true
      volumes:
      - name: stremio-build
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: stremio-nginx-config
