manifests/apps/stremio/patch-harbor-internal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stremio-web
  namespace: stremio
spec:
  template:
    spec:
