manifests/apps/stremio/patch-remove-gpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stremio-server
  namespace: stremio
spec:
  template:
    spec:
      runtimeClassName: null
      containers:
      - name: stremio-server
        resources:
          limits:
            memory: 4Gi
            cpu: 4
          requests:
            memory: 2Gi
            cpu: 2
