manifests/apps/stremio/harbor-registry-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-registry-nodeport
  namespace: harbor
spec:
  type: NodePort
  ports:
  - name: registry
    port: 5443
    targetPort: 5443
    nodePort: 30543
    protocol: TCP
  selector:
    app.kubernetes.io/component: registry
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: harbor
