manifests/apps/stremio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio-server
  namespace: stremio
spec:
  selector:
    app: stremio-server
  ports:
  - name: http
    port: 11470
    targetPort: 80
    protocol: TCP
  - name: https
    port: 12470
    targetPort: 12470
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: stremio-web
  namespace: stremio
spec:
  selector:
    app: stremio-web
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
