manifests/apps/stremio/harbor-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-registry-ingress
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-ovh-webhook-final
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - registry.harbor.daddyshome.fr
    secretName: harbor-registry-ingress-tls
  rules:
  - host: registry.harbor.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor-registry
            port:
              number: 5000
